cluster-health-api/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cluster-health-api
  namespace: cluster-api
spec:
  ingressClassName: nginx
  rules:
  - host: api.alphonzojonesjr.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cluster-health-api
            port:
              number: 80
